--- a/src/Components/Commands/Commands.module.css
+++ b/src/Components/Commands/Commands.module.css
@@ -69,7 +69,7 @@
 
 .myButton {
   position: relative;
-  z-index: 10000;
+  z-index: 10;
 }
 
 .torpText {
@@ -99,6 +99,12 @@
   max-width: 50px;
   max-height: 50px;
   margin-bottom: 10px;
+  z-index: 999 !important;
+  position: relative !important;
+}
+
+.arrowContainer:hover {
+  scale: 2;
 }
 
 .marginRight {
